# stock-analysis-app

./: .env.example  .gitignore  .gitleaks.toml  Dockerfile  README.md  docker-compose.yml  openapi.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py
app/batch/: pipeline.py  scheduler.py
app/core/: config.py  security.py
app/db/: migrate.py  pool.py  redis.py
app/schemas/: contracts.py
app/services/: analysis_jobs.py  backtest_engine.py  read_service.py  recommendation_engine.py
config/: curated_13f.json  news_queries.json
db/: schema.sql
db/migrations/: 0002_provenance_v125.sql  0003_on_demand_v1210.sql
docs/: generated-openapi.json  stock_app_system_design_20260707.pptx
docs/architecture-v1.0/: adr-log.md  architecture-overview.md  docker-compose.yml
docs/architecture-v1.2.1/: architecture-overview.md  domain-contract.md  openapi.yaml
docs/architecture-v1.2.2/: docker-compose.yml  domain-contract.md  repo-layout.md  schema.sql
docs/architecture-v1.2.5/: architecture-overview.md  openapi.yaml
docs/architecture-v1.2.7/: adr-log.md  (+3 more)
scripts/: hash_password.py  seed.py
tests/: conftest.py  test_analyze_api.py  test_analyze_worker.py  test_auth.py  test_backtest_engine.py  test_backtest_golden.py  test_boot_security.py  test_chip_ingest.py  test_config_and_ops.py  test_dashboard_contract.py  test_engine_golden.py  test_gdelt_adapter.py  test_module_detail_api.py  test_openapi_alignment.py  test_signal_calculators.py  test_yfinance_ingest.py
web/: Dockerfile  next.config.mjs  package-lock.json  package.json
(+44 files in other folders)
