[project]
name = "stock-analysis-app"
version = "0.1.0"
description = "Stock Investment Analysis App — five-lens decision support (Foundation)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "asyncpg>=0.29",
    "redis>=5.0",
    "PyJWT>=2.9",
    "itsdangerous>=2.2",
    "apscheduler>=3.10,<4",
    "yfinance==1.5.1",  # pinned: 1.x API (no per-call timeout kwarg); G3 live finding
    "defusedxml>=0.7",  # A8: XXE-safe parsing of EDGAR 13F XML (task #9)
    "vadersentiment==3.3.2",  # task #12: VADER headline sentiment (news lens)
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["docs", "web"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # Depends(...) in argument defaults is the FastAPI idiom
